@@ -2,7 +2,7 @@ Package: Power2Stage
 Type: Package
 Title: Power and Sample-Size Distribution of 2-Stage Bioequivalence Studies
 Version: 0.4.5.9000
-Date: 2017-07-20
+Date: 2017-08-24
 Authors@R: c(person("Detlew", "Labes", role = c("aut","cre"), 
                     email = "DetlewLabes@gmx.de"),
              person("Benjamin", "Lang", role =c ("aut"), 
